# ocdutils

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  ocdutils.sublime-project  pyproject.toml  requirements.txt  setup.py
mediatools/: __main__.py  audio.py  audiogrep.py  audiotranscribe.py  cli.py  contentawareduplicates.py  embeddings.py  filesystemfixes.py  formats.py  generativeimages.py  imgdescribe-old.py  imgdescribe.py  imgedit.py  mediahash.py  motionphotos.py  openaivision.py  renamers.py  sidecars.py  text.py  texttransform.py  transcribe.py
mediatools/backends/: __init__.py  averagehash.py  cv2cmp.py  cv2histogram.py  imagehash.py  lavis.py  modellib.py  openai.py  whisper.py  whispercpp.py
mediatools/lib/: cache.py  filesystem.py  generics.py  hashing.py  hotglue.py  log.py  spawn.py
mediatools/similarity/: cv2cmp.py  imagehashcmp.py
ocdutils/: dt.py  dtnamer.py  filesystem.py  fsjanitor.py  mdupes.py  motionphotos.py  ocddatetime.py  ocdfslinter.py  ocdlib.py  sidecars.py  similarimages.py  uniqmaning.py  uniqnamer.py
ocdutils/metadata/: cli.py  handlers.py  types.py
staging/: fs-mainy.py  janitor.py
tests/: metadata.py  motionphotos.py  test.py
