[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1

[project]
name = "mediatools"
version = "0.0.0"
dependencies = [
    "appdirs",
    "click",
    "ffmpeg-python",
    "imagehash",
    "iso639",
    "langdetect",
    "openai",
    "openai-whisper",
    "pillow",
    "pillow-heif",
    "pysrt",
    "python-magic",
    "rembg",
    "importlib-metadata; python_version >= '3.11'",
]
readme = "README.md"
description = "File (and media) manipulation tools"
license = {file = "LICENSE"}


[tool.setuptools]
packages = ["mediatools", "mediatools.lib", "mediatools.backends"]

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"


[project.scripts]
mediatool = "mediatools.cli:mediatool"
multitool = "mediatools.cli:multitool"
glados = "mediatools.cli:glados"
