[project]
name = "mediatools"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "appdirs",
    "click",
    "ffmpeg-python",
    "imagehash",
    "iso639",
    "langdetect",
    "openai>=1.84.0",
    "openai-whisper",
    "pillow",
    "pillow-heif",
    "pysrt",
    "python-magic",
    "rembg>=2.0.66",
]
readme = "README.md"
description = "File (and media) manipulation tools"
license = "GPL-3.0-or-later"
dynamic = [
  "version",
]

[project.scripts]
mediatool = "mediatools.cli:mediatool"
multitool = "mediatools.cli:multitool"
glados = "mediatools.cli:glados"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.3.0",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1

[tool.setuptools]
packages = ["mediatools", "mediatools.lib", "mediatools.backends"]

[tool.setuptools.dynamic]
version = { attr = "mediatools.__version__" }

[tool.black]
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
